manifests/openproject/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: openproject-redirect-https
  namespace: openproject
spec:
  redirectScheme:
    scheme: https
    permanent: true
