manifests/openproject/ingressroute-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openproject-web
  namespace: openproject
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`plan.yornik.eu`)
      kind: Rule
      middlewares:
        - name: openproject-redirect-https
          namespace: openproject
      services:
        - name: openproject
          port: 8080
